<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:background="@drawable/bg_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvJudulDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_permainan"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvHasilSuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:fontFamily="@font/comic_sans"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvJudulDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/btnMainLagi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_lagi"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Ungu"
        app:layout_constraintTop_toBottomOf="@id/tvHasilSuit"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnKembali"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_menu"
        android:backgroundTint="@color/Orange"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnMainLagi"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>